--- a/week5/kit305-android-tutorial-05-main/app/src/main/res/layout/activity_movie_details.xml
+++ b/week5/kit305-android-tutorial-05-main/app/src/main/res/layout/activity_movie_details.xml
@@ -71,4 +71,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtYear" />
+
+    <Spinner
+        android:id="@+id/mySpinner"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSave" />
 </androidx.constraintlayout.widget.ConstraintLayout>
